<resources>
    <string name="app_name">PosTrainer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_movement_detail">ActivityMovementDetail</string>
    <string name="title_activity_movement_menu">ActivityMovementMenu</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_reminders">Reminders</string>
    <string name="title_activity_manage_reminder">ActivityManageReminder</string>

    <!-- ReminderListActivity -->
    <string name="reminders_on">ON</string>
    <string name="reminders_off">OFF</string>
    <string name="reminders_prompt">Hit "+" to Create a New Reminder</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminderr_dialog_delete_title">Delete Reminder?</string>

    <!-- ActivityManageReminder -->
    <string name="manage_reminder_title_hint">Reminder Title</string>
    <string name="manage_reminder_vibrate">Vibrate Only</string>
    <string name="manage_reminder_renew">Renew Automatically</string>
    <string name="manage_reminder_action_done">Done</string>
    <string name="manage_reminder_action_delete">Delete</string>
    <string name="manage_reminder_new_title">New Reminder</string>
    <string name="manage_reminder_toolbar_title">Set Reminder</string>
    <string name="manage_reminder_write_successful">Reminder Updated/Created</string>
    <string name="manage_reminder_write_unsuccessful">Reminder Update Unsuccessful</string>

    <!-- ActivityMovementMenu -->
    <string name="movement_menu_guide">GUIDE</string>
    <string name="movement_menu_tab_stretches">STRETCHES</string>
    <string name="movement_menu_tab_exercises">EXERCISES</string>

    <!-- ActivityMovementDetail -->
    <string name="movement_detail_tab_description_abrv">DESC.</string>

    <string name="movement_detail_tab_description">DESCRIPTION</string>
    <string name="movement_detail_tab_steps">STEPS</string>


    <!-- SettingsActivity -->
    <string name="settings_button_about">About</string>
    <string name="settings_button_disclaimer">Disclaimer</string>
    <string name="settings_button_contact">Contact</string>
    <string name="settings_version_number">Version: 2.0</string>


    <!-- Dialog -->
    <string name="dialog_positive_ok">OK</string>
    <string name="dialog_negative_cancel">Cancel</string>

    <!-- Navigation Fragment-->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="jump_to">Jump To:</string>

    <!-- Validation -->
    <string name="error_input_invalid_blank">Title can\'t be blank</string>
    <string name="error_input_invalid_too_long">Title must be 36 Chars. or less</string>
    <string name="error_too_many_reminders">Maximum Number of Reminders is 5</string>

    <!--Toolbar Titles -->
    <string name="movement_menu_title">Movements</string>
    <string name="movement_detail_title">Movement Detail</string>
    <string name="reminder_list_title">Current Reminders</string>
    <string name="reminder_manage_title">Manage Reminder</string>
    <string name="reminder_disclaimer_title">Disclaimer</string>
    <string name="settings_title">About</string>

    <!-- Other -->
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="disclaimer_body">The information provided within this App, must at no point be considered as
        professional advice.
        I have selected a series of low-impact Stretches and Exercises which, in my admittedly unprofessional opinion,
        may alleviate postural imbalances associated with being a desk jockey.
        All forms of Exercise carry a risk of injury, however small. Some of the movements may stretch/activate muscles
        which haven\'t seen a lot of stretching/activation in a long time.
        I implore you to take extreme caution when performing any of the movements for the first time, performing only a
        few repetitions and not going beyond a \'light stretching\' sensation.
        If you experience excessive pain during, or any level of long-term pain after a movement, consult a professional
        before performing any more movements. You have been warned.
    </string>
    <string name="disclaimer_title">Damnit Jim, I\'m a Programmer, not a Doctor!</string>
    <string name="disclaimer_check_box">I understand the risk.</string>
    <string name="disclaimer_button">Proceed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_title">Contact Information</string>
    <string name="contact_info">
        Website: wiseassblog.com\n
        Youtube: youtube.com/wiseass\n
        Facebook: facebook.com/wiseassblog\n
        G+: google.com/+wiseass
    </string>
    <string name="stop_reminder">Stop Reminder</string>
    <string name="menu_item_reminders">Reminders</string>
    <string name="menu_item_movements">Movements</string>
    <string name="menu_item_about">About</string>
    <string name="error_database_write_failure">Unable to write to Database :(</string>
    <string name="message_database_write_successful">Reminder updated Succesfully</string>
    <string name="prompt_new_reminder">Hit \"+\" to \nProceed</string>
    <string name="error_database_connection_failure">Couldn\'t connect to Database</string>
    <string name="msg_reminder_activated">Reminder Activated</string>
    <string name="msg_reminder_deactivated">Reminder Deactivated</string>
    <string name="msg_reminder_deleted">Reminder Deleted</string>
    <string name="def_reminder_name">New Reminder</string>
    <string name="msg_reminder_limit_reached">Maximun Reminders per Day is 5.</string>
    <string name="error_invalid_reminder_id">That\'s not supposed to happen. Contact the Dev. if this message keeps
        appearing.
    </string>
    <string name="error_managing_reminder">Error Managing Reminder</string>
    <string name="error_starting_reminder">Unable to Start Reminder</string>
    <string name="action_delete_item">Reminder Deleted</string>
    <string name="action_undo">UNDO</string>
    <string name="error_unable_to_retrieve_reminder">Unable to Restore Reminder</string>
    <string name="description">Description</string>
    <string name="instructions">Instructions</string>
    <string name="movements">Movements</string>
    <string name="reminders">Reminders</string>
    <string name="settings">Settings</string>


</resources>
