<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootReminderDetailFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/standard_vertical_margin"
    >

    <ImageButton
        android:id="@+id/imbReminderDetailBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:background="?attr/selectableItemBackground"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_arrow_back_white_24dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp" />

    <ImageButton
        android:id="@+id/imbReminderDetailProceed"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:background="?attr/selectableItemBackground"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_done_white_24dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp" />

    <EditText
        android:id="@+id/edtReminderTitle"
        style="@style/InputField.ReminderName"
        android:theme="@style/Postrainer.Inverse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imbReminderDetailProceed"
        android:inputType="textCapWords"
        android:hint="@string/manage_reminder_title_hint"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imbReminderDetailBack"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <CheckBox
        android:id="@+id/chbVibrateOnly"
        style="@style/CheckBox_White_Border"
        android:theme="@style/Postrainer.Inverse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtReminderTitle"
        android:text="@string/manage_reminder_vibrate"

        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtReminderTitle"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <CheckBox
        android:id="@+id/chbRenewAutomatically"
        style="@style/CheckBox_White_Border"
        android:theme="@style/Postrainer.Inverse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chbVibrateOnly"
        android:text="@string/manage_reminder_renew"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/chbVibrateOnly"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <View
        android:id="@+id/div_manage_one"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_below="@id/chbRenewAutomatically"
        android:background="@drawable/divider_white"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/chbRenewAutomatically"
        app:layout_constraintHorizontal_bias="0.0" />

    <TimePicker
        android:id="@+id/pckAlarmTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/div_manage_one"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/div_manage_one"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>